infra-test/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  test
  labels:
    app:  test
spec:
  selector:
    matchLabels:
      app: test
  replicas: 1
  template:
    metadata:
      labels:
        app:  test
    spec:
      containers:
      - name:  test
        image:  nginx:latest
        ports:
        - containerPort:  80
          name:  test
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: test-svc
spec:
  selector:
    app: test
  type: ClusterIP
  ports:
  - name: test-svc
    protocol: TCP
    port: 80
    targetPort: 80
