infra-test/ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: "test.milana.tech"
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: test-svc
                port:
                  number: 80
            path: "/"
  tls:
    - hosts:
      - test.milana.tech
      secretName: example-tls
